# compiler

./: .clang-format  .clang-tidy  .clangd  .codespellrc  .copyright.tmpl  .cspell.json  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  Readme.txt  ToDo.md  build.py  cmake-build.cmd  cmake-build.sh  cmake-eclipse-ninja.cmd  cmake-eclipse-ninja.sh  cmake-eclipse.sh  cmake-msvc-2017-ninja.cmd  cmake-msvc-2017.cmd  cmake-msvc-clang.cmd  conan_install.py  conanfile.py  conanfile.txt  eclipse-cmake.sh  eclipse-mingw-cmake.cmd  misc_iwyu.imp
doc/: CMakeLists.txt  developer.md  doxyfile.in  doxyfilter.py  tale_of_x3.rst  todo.md  vhdl93_ast.dot  vhdl_urls.rst  vhdl_urls.txt
doc/api/: doxyfile.in  readme.md
doc/script/: doxyfilter.py  gen_test_matrix.py
doc/testsuite/: doxyfile.in  readme.md
doc_ng/: CMakeLists.txt  conf.py.in  index.rst  py_requirements.txt  requirements.txt  testsuite_dataset.rst  testsuite_parser_grammar.rst
doc_ng/script/: py_requirements.txt
l10n/: CMakeLists.txt  eda.pot  run_xgettext.cmake
l10n/po/: de.po
playground/: CMakeLists.txt  vhdl_entity_parser.cpp  x3_quoted_string.cpp  x3_stringview_quoted_string.cpp
playground/boost_test/: CMakeLists.txt  bt_dataset.cpp  bt_dataset_args.cpp  dataset_master_test_suite_accessible_main.cpp  dataset_master_test_suite_accessible_test.cpp  dataset_master_test_suite_accessible_test_with_arity.cpp
playground/cli11/: CMakeLists.txt  cli11.cpp
playground/cxx/: CMakeLists.txt  cxx_annotation_cache.cpp  cxx_ast_tagged_stats.cpp  cxx_color_output.cpp  cxx_color_output_win.cpp  cxx_ellipsis_compress.cpp  cxx_error_handler.cpp  cxx_facet.cpp  cxx_pow_constexpr.cpp  cxx_string_view_range.cpp  cxx_tagged_pack.cpp
playground/vhdl93/: CMakeLists.txt  basic_graphic_character.cpp  cxx_indent_ostreambuf.cpp  cxx_variant_print_visitor_concept.cpp  qi_snippets.cpp  vhdl_based_literal.cpp  vhdl_expression_eval.cpp  vhdl_numeric_literals.cpp  vhdl_string_literal_print.cpp  x3_based_literal.cpp  x3_based_literal_minimal.cpp  x3_configuration_specification - Kopie.cpp  x3_configuration_specification.cpp  x3_decimal_literal.cpp  x3_decimal_literal2.cpp  x3_expression.cpp  x3_extended_identifier.cpp  x3_integer.cpp  x3_integer_0_problem_minimal.cpp  x3_integer_lambda_solution.cpp  x3_integer_solution.cpp  x3_ir1045.cpp  x3_list_chunk.cpp  x3_literal.cpp  x3_literal_mini.cpp  x3_simple_expr.cpp  x3_snipets.cpp  x3_string_literal.cpp  x3_string_literal_attr.cpp  x3_string_literal_minimal.cpp  x3_string_literal_view.cpp  x3_stringview_quoted_string.cpp  x3_variant_inheritance.cpp
playground/vhdl93/VhdlArchive/: INFO.txt  Readme.txt  main.c  makefile  rule.txt  uc_vhdlgrammar.txt
playground/x3/: CMakeLists.txt  x3_common_error_handler.cpp  x3_handle_parse_error.cpp
playground/x3/calc9/: CMakeLists.txt  ast.hpp
source/color/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/src/: buildinfo.cpp  color.cpp  cxx_bug_fatal.cpp  file_loader.cpp  indent_stream.cpp  message.cpp  settings.cpp  user_home_dir.cpp  winapi_color.cpp
source/frontend/: CMakeLists.txt
source/frontend/src/: init.cpp  main.cpp  signal_handler.cpp  stacktrace_boost.cpp  stacktrace_gdb.cpp
source/pch/: CMakeLists.txt
source/util/: CMakeLists.txt  Readme.md
source/vhdl/: CMakeLists.txt
source/vhdl/script/: change_ast_variant.py  gen_ast_adapted.py  gen_powX.py  gen_vhdl93_lrm_charsets.py  gen_vhdl93_x3_skelet.py  vhdl_fetch_ieee_libs.py  write_test_case_files.py
source/vhdl/src/: context.cpp  diagnostic_handler.cpp  diagnostic_printer.cpp  error_handler.cpp
sources/common/: CMakeLists.txt
sources/common/src/: buildinfo.cpp  color.cpp  configuration.cpp  file_loader.cpp  file_reader.cpp  settings.cpp  user_home.cpp  winapi_color.cpp
sources/ibis/: CMakeLists.txt
sources/ibis/src/: build_info.cpp  docopt_inst.cpp  global_options.cpp  init.cpp  init_color.cpp  main.cpp  parse_cli.cpp  parse_env.cpp  signal.cpp  signal_handler.cpp  stacktrace_boost.cpp  stacktrace_gdb.cpp
sources/vhdl/: CMakeLists.txt
sources/vhdl/doc/: doxyfile.in
sources/vhdl/src/: ast_printer.cpp  context.cpp  error_handler.cpp  grammar.cpp
sources/vhdl/test/: CMakeLists.txt  data_set.cpp  data_set.hpp  generate_data_test_case.hpp  make_gold.cpp  make_gold_mklist.py  parser_aspect.cpp  parser_clause.cpp  parser_concurrent_statements.cpp  parser_declaration.cpp  parser_design_unit.cpp  parser_entities.cpp  parser_expression.cpp  parser_file.cpp  parser_interface.cpp  parser_literals.cpp  parser_names.cpp  parser_production.cpp  parser_specifications.cpp  parser_statement.cpp  parser_subprogram.cpp  parser_type.cpp  parser_xxx.cpp  parser_xxx_inst.cpp  test_case_path.hpp.in  test_matrix.rst  testing_parser.hpp  testing_parser_def.hpp  testing_parser_grammar_hack.hpp  testing_util.cpp  testing_util.hpp
sources/vhdl/utils/: change_ast_variant.py  fix_test_case_enumeration.py  gen_ast_adapted.py  gen_boost_tests.py  gen_powX.py  vhdl_fetch_ieee_libs.py
sources/vhdl93/: CMakeLists.txt  project_org.txt
sources/vhdl93/doc/: doxyfile.in  readme.md  vhdl93_ast.dot
sources/vhdl93/src/: ast_printer.cpp  dummy.txt  error_handler.cpp  expression.cpp  expression_parse.cpp  grammar.cpp  literal.cpp  new_operator.cpp  skipper.cpp
sources/vhdl93/test/: CMakeLists.txt  app_mock.cpp  app_mock.hpp  basic_production_rules.cpp  data_set.cpp  data_set.hpp  error_reporting.cpp  generate_data_test_case.hpp  grammar_api.cpp  grammar_api.hpp  make_gold.cpp  parser_aspect.cpp  parser_clause.cpp  parser_declaration.cpp  parser_expression.cpp  parser_file.cpp  parser_interface.cpp  parser_literals.cpp  parser_production.cpp  parser_statement.cpp  parser_subprogram.cpp  parser_test.hpp  parser_type.cpp  parser_xxx.cpp  (+7 more)
src/vhdl93/: CMakeLists.txt  grammar.cpp
testsuite/common/: CMakeLists.txt
testsuite/common_util/: CMakeLists.txt
testsuite/misc/: CMakeLists.txt
testsuite/pch/: CMakeLists.txt
testsuite/spirit_x3/: CMakeLists.txt
testsuite/testsuite_util/: CMakeLists.txt
testsuite/util/: CMakeLists.txt
testsuite/vhdl/: CMakeLists.txt
(+4338 files in other folders)
